--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="en-US">
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <title>
-Donovan's Portfolio
+Donovan's Portfolio!
 </title>
 
 
