--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang ="en-US">
-<link href="css/styles.css" rel="stylesheet" type="text/css">
-<title>
-Donovan's Portfolio!
-</title>
+<head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+<title>Donovan's Portfolio!</title>
+</head>
+<body>
+<img src="img/picofdonovan" alt="A picture of Donovan Weber">
+<div class="about-me">
+<h1> About Me</h1>
+<p>About <a href="hyperlink to github acc">me</a>(If you click on "me" 
+it will take you to my github account.) 
+</p>
+<h2>Here are some of my projects!</h2>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
 
 
-
-
-
-
-
-
-
-
-
-
-
+    </div>
+  </body>
 </html>
