add css styles, divs in html

--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
 <title>Donovan's Portfolio!</title>
 </head>
 <body>
-<img src="img/picofdonovan" alt="A picture of Donovan Weber">
-<div class="about-me">
-<h1> About Me</h1>
-<p>About <a href="hyperlink to github acc">me</a>(If you click on "me" 
-it will take you to my github account.) 
-</p>
-<h2>Here are some of my projects!</h2>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+  <img src="img/picofdonovan" alt="A picture of Donovan Weber">
+<div class="all">
+  <div class="about-me">
+    <h1> About Me</h1>
+      <p>About <a href="hyperlink to github acc">me </a> (If you click on "me" 
+    it will take you to my github account.) 
+  </p>
+</div>
+<h2>Here are some of my <span class="bold">projects!</span></h2>
+  <ul class="projects">
+    <li> This is my <strong>first</strong> project<a href="github repo of proj"> Name of repo</a></li>
+    <li>Favorite things <a href="link of git repo"> Name of repo</a></li>
+    <li>Animal Shelter <a href="link to animal"> Name of repo</a> worked with liam</li>
+    <li>Boring lecture <a href="link to bl repo"> Name of repo </a> one of my more favorite projects</li>
   </ul>
 
 
+
+      
     </div>
   </body>
 </html>
