add color and borders to about me and font changes on css and created list for hobbies.

--- a/index.html
+++ b/index.html
@@ -5,23 +5,39 @@
 <title>Donovan's Portfolio!</title>
 </head>
 <body>
-  <div class="all">
-    <div class="about-me">
-      <h1> About Me</h1>
-      <img src="img/donovan.jpeg" hieght=500px width=400px alt="A picture of Donovan Weber">
-      <p>About <a href="hyperlink to github acc">me </a> (If you click on "me" 
-        it will take you to my github account.) 
-      </p>
+  <div class="about-me">
+    <h1> About Me</h1>
+    <img src="img/donovan.jpeg" hieght=500px width=400px alt="A picture of Donovan Weber">
+    <p> <a href="https://github.com/DonovanWeber"> My Github account</a> 
+    </p>
+    <p> <span class="bold">Hey!</span> my name is Donovan Weber. Im a novice coder from the great
+      city and state of Silver Spring, Maryland. I grew up around Washington D.C. my whole life.<span class="fun"> 
+      FUN FACT: Famous Comedian Dave Chappelle
+      grew up and lived in Silver Spring too.</span> </p>
     </div>
-    <h2>Here are some of my <span class="bold">projects!</span></h2>
-  <ul class="projects">
-    <li> This is my <strong>first</strong> project<a href="github repo of proj"> Name of repo</a></li>
-    <li>Favorite things <a href="link of git repo"> Name of repo</a></li>
-    <li>Animal Shelter <a href="link to animal"> Name of repo</a> worked with liam</li>
-    <li>Boring lecture <a href="link to bl repo"> Name of repo </a> one of my more favorite projects</li>
+      
+  <div class="all">
+<h2>Here are some of my <span class="bold">projects!</span></h2>
+  <ol class="projects">
+    <li><a href="https://github.com/DonovanWeber/my-first-webpage"> 
+      <strong>My First Webpage</strong></a>: This was my first attempt at a webpage with <em>Epicodus</em> </li>
+    <li> <a href="https://github.com/DonovanWeber/My-First-Webpage-1"> 
+      <strong>Favorite Things</strong></a>:brief descrip of my first webpage wjayt u think </li>
+    <li><a href="https://github.com/DonovanWeber/animal-shelter"> 
+      <strong>Animal Shelter</strong></a>: worked with liam </li>
+    <li><a href="https://github.com/DonovanWeber/boring-lecture"> 
+      <strong>Boring Lecture</strong></a>: one of my more favorite projects </li>
+  </ol>
+  </div>
+<div class="hobbies">
+  <h3>Some of Hobbies and Interests</h3>
+    <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+
   </ul>
-
-
 
       
     </div>
