add descriptions to projects list and reedit css by adding a new full page div.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang ="en-US">
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-<title>Donovan's Portfolio!</title>
+<div class="page">
+  <title>Donovan's Portfolio!</title>
 </head>
 <body>
   <div class="about-me">
-    <h1> About Me</h1>
+    <h1 class="sauce"> About Me</h1>
       <img src="img/donovan.jpeg" hieght=500px width=400px alt="A picture of Donovan Weber">
       <p> <a href="https://github.com/DonovanWeber"> My Github account</a> 
       </p>
@@ -20,26 +21,38 @@
 <h2>Here are some of my <span class="bold">projects!</span></h2>
   <ol class="projects">
     <li><a href="https://github.com/DonovanWeber/my-first-webpage"> 
-      <strong>My First Webpage</strong></a>: This was my first attempt at a webpage with <em>Epicodus</em> </li>
+      <strong>My First Webpage</strong></a>: This is my first attempt at a webpage with 
+      <em>Epicodus.</em>It uses html only and contains basic information on the objectives of the first
+      week of class at Epicodus.  </li>
     <li> <a href="https://github.com/DonovanWeber/My-First-Webpage-1"> 
-      <strong>Favorite Things</strong></a>:brief descrip of my first webpage wjayt u think </li>
+      <strong>Favorite Things</strong></a>: My favortie things webpage was made using html and stylizied 
+      with html. I shared the work on this project with a member from dev team. The webpage talks about
+      my favorite foods and websites. </li>
     <li><a href="https://github.com/DonovanWeber/animal-shelter"> 
-      <strong>Animal Shelter</strong></a>: worked with liam </li>
+      <strong>Animal Shelter</strong></a>: This webpage is about a a fake animal shelter made with HTML and stylizied 
+      with CSS. I worked on this project with a different member of my dev team. The webpage offers pictures
+      of pretend adoptable animals and links to their pretend pages.</li>
     <li><a href="https://github.com/DonovanWeber/boring-lecture"> 
-      <strong>Boring Lecture</strong></a>: one of my more favorite projects </li>
-    </ol>
+      <strong>Boring Lecture</strong></a>: Boring Lecture is a webpage that is written in html and stylizied by css.
+      This webpage includes colorful text and a picture of a bored clown. This project has to be my
+      personal favorite not because of the design or lack of but it was the first time I had fixed a
+      bug and the satisfaction of figuring it out was very blissful. </li>
+  </ol>
+  
   </div>
 <div class="hobbies">
   <h3>Some of Hobbies and Interests</h3>
     <ul>
-      <li> </li>
-      <li> </li>
-      <li> </li>
-      <li> </li>
-
+      <li>Coding </li>
+      <li>Gaming</li>
+      <li>Working Out</li>
+      <li>Hiking</li>
+      <li>I like trying to cook</li>
       
 
+      
       </ul>
+      </div>
     </div>
   </body>
 </html>
