switched classes that work better alone than a div on two headers and removed divs from html.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <div class="about-me">
     <h1 class="sauce"> About Me</h1>
       <img src="img/donovan.jpeg" hieght=500px width=400px alt="A picture of Donovan Weber">
-      <p> <a href="https://github.com/DonovanWeber"> My Github account</a> 
-      </p>
-      <p> <span class="bold">Hey!</span> my name is Donovan Weber. Im a novice coder from the great
+    <p> <a href="https://github.com/DonovanWeber"> My Github account</a></p>
+    <p> <span class="bold">Hey!</span> my name is Donovan Weber. Im a novice coder from the great
       city and state of Silver Spring, Maryland. I grew up around Washington D.C. my whole life.<span class="fun"> 
             FUN FACT: Famous Comedian Dave Chappelle
         grew up and lived in Silver Spring too.</span></p>
   </div>
       
-  <div class="all">
-<h2>Here are some of my <span class="bold">projects!</span></h2>
+  
+    <h2 class="all">Here are some of my <span class="bold">projects!</span></h2>
+  
   <ol class="projects">
     <li><a href="https://github.com/DonovanWeber/my-first-webpage"> 
       <strong>My First Webpage</strong></a>: This is my first attempt at a webpage with 
@@ -41,7 +41,7 @@
   
   </div>
 <div class="hobbies">
-  <h3>Some of Hobbies and Interests</h3>
+  <h3>Some of my Hobbies and Interests</h3>
     <ul>
       <li>Coding </li>
       <li>Gaming</li>
