add background css styles WIPbackground info and README.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
       <li>Working Out</li>
       <li>Hiking</li>
       <li>I like trying to cook</li>
-      
-
-      
-        </ul>
+     </ul> 
+    </div>
+    <div class="background">
+    <h2>Background</h2>
+    <p>Talkign about myself lalalalalalalalalalala
+      lalalalalalalalalalalalal
+    </p>
       </div>
     </div>
   </body>
