--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 <div class="hobbies">
   <h3 class="hobbies">Some of my Hobbies and Interests</h3>
-    <ul>
+    <ul class="hobbies">
       <li>Coding </li>
       <li>Gaming</li>
       <li>Working Out</li>
@@ -52,8 +52,18 @@
     </div>
     <div class="background">
     <h2>Background</h2>
-    <p>Talkign about myself lalalalalalalalalalala
-      lalalalalalalalalalalalal
+      <p>A bit of background about me is that I went to public school in Maryland
+      and at the start of high school I would join a dual enrollment program. 
+      This shot me right into intense AP classes and a bit later college courses.
+      I ended up dropping the program because I didn't see a future
+      with the route they wanted me to take. I would then join a program where 
+      I wouldn't have to attend high school anymore and have the opportunity to pursue 
+      a Health related associates degree. At first I thought this is the route I wanted to take
+      but it ended pushing me further in the wrong direction. I ended up dropping out of community 
+      college after high school for the sole reason that what I was doing I knew was going to get 
+      me specifically <strong>nowhere.</strong> <em>Not saying college isn't great for many people but it just was not 
+      my forte</em> After all those college courses I ended up looking into a coding bootcamp after my 
+      recommended me from her experiences. Since then I am now here learning and putting my skills to the test at Epicodus.
     </p>
       </div>
     </div>
